@@ -440,3 +440,4 @@ evaluation and ode improvements
 
 * Jason Coy <funkdart@gmail.com> optimisation for dwt.c
 
+* Richard Guenther <rguenther@suse.de> bug reports
